# pnp-zone

./: .gitignore  .gitmodules  Cargo.toml  ICON_ATTRIBUTIONS  Makefile  README.md  deny.toml  example.config.toml  go.mod  go.sum  install.sh  install.yml  pnp-zone.nginx  pnp-zone.service  pnp-zone.socket  requirements.txt
.github/workflows/: linux.yml
cmd/pnp-zone/: main.go
conf/: config.go
frontend/: index.html  package.json
frontend/src/: main.tsx
handler/: helper.go  index.go
handler/frontend/: auth.go  index.go
models/: rooms.go  user.go
modules/: definition.go
pnp-zone/: Cargo.toml  Makefile.toml
pnp-zone/src/: main.rs
pnp_zone/: manage.py
pnp_zone/accounts/: admin.py  models.py
pnp_zone/blessings/: apps.py  models.py
pnp_zone/board/: admin.py  consumer.py  events.py  models.py  routing.py  urls.py  views.py
pnp_zone/campaign/: admin.py  models.py  urls.py  views.py
pnp_zone/ceremonies/: apps.py  models.py
pnp_zone/chants/: apps.py  models.py  urls.py  views.py
pnp_zone/character/: admin.py  models.py  urls.py  views.py
pnp_zone/dashboard/: urls.py  views.py
pnp_zone/dm/: urls.py  views.py
pnp_zone/player/: urls.py  views.py
pnp_zone/pnp_zone/: asgi.py  custom_ldap_backend.py  mailer.py  menu.py  routing.py  settings.py  settings_dev.py  urls.py  views.py  wsgi.py
pnp_zone/scripts/: hexagon.py
pnp_zone/templates/: base.html  error.html  preloader.html  (+1 more)
server/: config.go  database.go  plugins.go  router.go  server.go  templates.go
templates/: base.gohtml  head.gohtml  login.gohtml  register.gohtml  waw.gohtml
(+194 files in other folders)
