[package]
name = "pnp-zone"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>", "gammelalf"]
description = "A pen and paper platform"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webframework
actix-web = { version = "~4" }
# Tools for actix-web
actix-toolbox = { version = "~0.10", features = ["ws", "logging", "session"] }

# Async runtime
tokio = { version = "~1", features = ["sync", "rt-multi-thread", "macros"] }

# orm
rorm = { version = "~0.5", features = ["tokio-rustls", "cli", "uuid"] }

[features]
rorm-main = []
